--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "axios": "^1.7.7",
     "camelcase-keys": "^9.1.3",
     "chart.js": "~4.4.4",
+  
     "color2k": "^2.0.2",
     "company-email-validator": "^1.1.0",
     "core-js": "3.38.1",
@@ -72,6 +73,8 @@
     "idb": "^8.0.0",
     "js-cookie": "^3.0.5",
     "libphonenumber-js": "^1.11.9",
+    "lit-html": "^3.2.1",
+    "mammoth": "^1.9.0",
     "markdown-it": "^13.0.2",
     "markdown-it-link-attributes": "^4.0.1",
     "md5": "^2.3.0",
