--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "vue-router": "~4.4.5",
     "vue-upload-component": "^3.1.17",
     "vue-virtual-scroller": "^2.0.0-beta.8",
+    "vue3-ace-editor": "^2.2.4",
     "vue3-click-away": "^1.2.4",
     "vuedraggable": "^4.1.0",
     "vuex": "~4.1.0",
