--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/components": "^12.0.0",
     "@vueuse/core": "^12.0.0",
+    "ace-builds": "^1.39.1",
     "activestorage": "^5.2.6",
     "axios": "^1.7.7",
     "camelcase-keys": "^9.1.3",
