--- a/config/features.yml
+++ b/config/features.yml
@@ -158,7 +158,7 @@
 - name: custom_roles
   display_name: Custom Roles
   enabled: false
-  premium: true
+  premium: false
 - name: chatwoot_v4
   display_name: Chatwoot V4
   enabled: true
