--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:coverage": "TZ=UTC vitest --no-watch --no-cache --coverage",
     "start:dev": "foreman start -f ./Procfile.dev",
     "start:test": "RAILS_ENV=test foreman start -f ./Procfile.test",
-    "start:serve": "foreman start -f ./Procfile.serve",
+    "start:serve": "RAILS_ENV=serve foreman start -f ./Procfile.serve -e .env.serve",
     "dev": "overmind start -f ./Procfile.dev",
     "ruby:prettier": "bundle exec rubocop -a",
     "build:sdk": "BUILD_MODE=library vite build",
