--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ace-builds": "^1.39.1",
     "activestorage": "^5.2.6",
     "axios": "^1.8.2",
+    "bottom-navigation-vue": "2.6.0",
     "camelcase-keys": "^9.1.3",
     "chart.js": "~4.4.4",
     "color2k": "^2.0.2",
