--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -7,7 +7,7 @@ internal_check_new_versions_job:
   cron: '0 12 */1 * *'
   class: 'Internal::CheckNewVersionsJob'
   queue: scheduled_jobs
-# # executed At every 5th minute..
+# # executed At every minute..
 trigger_scheduled_items_job:
   cron: '*/1 * * * *'
   class: 'TriggerScheduledItemsJob'
